--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -163,6 +163,11 @@
     <ClCompile Include="Features\Model\Helper\ModelHelper.cpp" />
     <ClCompile Include="Features\Model\Model.cpp" />
     <ClCompile Include="Features\Model\ModelManager.cpp" />
+    <ClCompile Include="Features\NiUI\Derived\Drawer.cpp" />
+    <ClCompile Include="Features\NiUI\Interface\NiUI_IDrawer.cpp" />
+    <ClCompile Include="Features\NiUI\Math\NiVec2.cpp" />
+    <ClCompile Include="Features\NiUI\NiUI.cpp" />
+    <ClCompile Include="Features\NiUI\NiUI_Input.cpp" />
     <ClCompile Include="Features\Object3d\Object3d.cpp" />
     <ClCompile Include="Features\Object3d\Object3dSystem.cpp" />
     <ClCompile Include="Features\Particle\Emitter\ParticleEmitter.cpp" />
@@ -227,6 +232,13 @@
     <ClInclude Include="Features\Model\Helper\ModelHelper.h" />
     <ClInclude Include="Features\Model\Model.h" />
     <ClInclude Include="Features\Model\ModelManager.h" />
+    <ClInclude Include="Features\NiUI\Derived\Drawer.h" />
+    <ClInclude Include="Features\NiUI\Interface\NiUI_IDrawer.h" />
+    <ClInclude Include="Features\NiUI\Math\NiVec2.h" />
+    <ClInclude Include="Features\NiUI\NiUI.h" />
+    <ClInclude Include="Features\NiUI\NiUI_Input.h" />
+    <ClInclude Include="Features\NiUI\Type\NiUI_ComponentData.h" />
+    <ClInclude Include="Features\NiUI\Type\NiUI_Enum.h" />
     <ClInclude Include="Features\Object3d\Object3d.h" />
     <ClInclude Include="Features\Object3d\Object3dSystem.h" />
     <ClInclude Include="Features\Particle\Emitter\ParticleEmitter.h" />
