--- a/SampleProject/imgui.ini
+++ b/SampleProject/imgui.ini
@@ -69,6 +69,12 @@ Size=6,27
 Collapsed=0
 DockId=0x00000006,0
 
+[Window][NiUI_DebugInfo]
+Pos=17,17
+Size=15,27
+Collapsed=0
+DockId=0x00000009,1
+
 [Table][0x3DFC7327,2]
 Column 0  Weight=1.0000
 Column 1  Weight=1.0000
@@ -523,6 +529,6 @@ DockSpace         ID=0xD5ACB325 Window=0xA87D555D Pos=0,0 Size=32,32 Split=Y
         DockNode  ID=0x00000006 Parent=0x00000001 SizeRef=1120,670 CentralNode=1 Selected=0x13926F0B
       DockNode    ID=0x00000002 Parent=0x00000003 SizeRef=1600,206 Selected=0x64F50EE5
     DockNode      ID=0x00000004 Parent=0x00000008 SizeRef=349,900 Split=Y Selected=0x435A4E3F
-      DockNode    ID=0x00000009 Parent=0x00000004 SizeRef=348,770 Selected=0x435A4E3F
+      DockNode    ID=0x00000009 Parent=0x00000004 SizeRef=348,770 Selected=0xC4F72FF0
       DockNode    ID=0x0000000A Parent=0x00000004 SizeRef=348,128 Selected=0x627D110E
 
