change: 最適化設定とシェーダー属性の変更
## 変更内容

### Engine.vcxproj
- 最適化設定を`MaxSpeed`から`MinSpace`に変更

### Object3d.PS.hlsl
- `PixelShaderOutput`構造体に`[earlydepthstencil]`属性を追加
- `main`関数内のアルファ値が0以下の場合にピクセルを破棄するコードをコメントアウト

### imgui.ini
- 複数のウィンドウの位置とサイズを変更
  - `Log`
  - `Objects`
  - `デバッグ`
  - `DebugInfo`
  - `Viewport`
  - `NiUI_DebugInfo`
  - `DockSpace`

--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -105,7 +105,7 @@
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <PrecompiledHeaderFile>$(ProjectDir)Common\stdafx.h</PrecompiledHeaderFile>
       <ForcedIncludeFiles>%(ForcedIncludeFiles)</ForcedIncludeFiles>
-      <Optimization>MaxSpeed</Optimization>
+      <Optimization>MinSpace</Optimization>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
     </ClCompile>
     <Link>
