change: 複数のファイルに対する仕様変更
## ParticleEmitter.cpp
- `Initialize` メソッド内で `emitterData_.name_` が空でない場合の処理を変更
- `particleName_` と `ptrHex_` を組み合わせた `name_` の設定を追加
- `DebugWindow` メソッド内でも同様の変更を実施

## ParticleEmitter.h
- 新しいメンバー変数 `ptrHex_` を追加

## GameScene.cpp
- `pGrid_` の初期化に使用するオブジェクトファイルを `Grid_v3.obj` から `Grid_v4.obj` に変更

## Engine.vcxproj.filters
- `NiGuiDrawer.cpp` と `NiGuiDebug.cpp` のフィルターを `Feature\NiGuiDerived` に設定

## imgui.ini
- 複数のウィンドウの位置とサイズを変更

## バイナリファイル
- `Grid_v4.mtl` ファイルを新たに追加
- `Grid_v4.obj` ファイルを新たに追加

--- a/Engine/Engine.vcxproj.filters
+++ b/Engine/Engine.vcxproj.filters
@@ -372,8 +372,12 @@
     <ClCompile Include="BaseClasses\ObjectSystemBase.cpp">
       <Filter>BaseClass</Filter>
     </ClCompile>
-    <ClCompile Include="Features\NiGui\NiGuiDrawer.cpp" />
-    <ClCompile Include="Features\NiGui\NiGuiDebug.cpp" />
+    <ClCompile Include="Features\NiGui\NiGuiDebug.cpp">
+      <Filter>Feature\NiGuiDerived</Filter>
+    </ClCompile>
+    <ClCompile Include="Features\NiGui\NiGuiDrawer.cpp">
+      <Filter>Feature\NiGuiDerived</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Common\define.h">
