--- a/SampleProject/imgui.ini
+++ b/SampleProject/imgui.ini
@@ -4,20 +4,20 @@ Size=756,957
 Collapsed=0
 
 [Window][Log]
-Pos=0,694
-Size=1249,206
+Pos=0,25
+Size=15,27
 Collapsed=0
 DockId=0x00000002,0
 
 [Window][Objects]
-Pos=0,39
-Size=127,653
+Pos=0,17
+Size=7,27
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][デバッグ]
-Pos=1251,39
-Size=349,737
+Pos=17,17
+Size=15,27
 Collapsed=0
 DockId=0x00000009,0
 
@@ -38,7 +38,7 @@ Collapsed=0
 
 [Window][WindowOverViewport_11111111]
 Pos=0,0
-Size=1600,900
+Size=32,32
 Collapsed=0
 
 [Window][TestWindow]
@@ -53,25 +53,25 @@ Collapsed=0
 
 [Window][DebugInfoBar]
 Pos=0,0
-Size=1600,37
+Size=32,15
 Collapsed=0
 DockId=0x00000007,0
 
 [Window][DebugInfo]
-Pos=1251,778
-Size=349,122
+Pos=17,30
+Size=15,27
 Collapsed=0
 DockId=0x0000000A,0
 
 [Window][Viewport]
-Pos=129,39
-Size=1120,653
+Pos=9,17
+Size=6,27
 Collapsed=0
 DockId=0x00000006,0
 
 [Window][NiUI_DebugInfo]
-Pos=1251,39
-Size=349,737
+Pos=17,17
+Size=15,27
 Collapsed=0
 DockId=0x00000009,1
 
@@ -519,8 +519,16 @@ Column 1  Weight=1.0000
 Column 0  Weight=1.0000
 Column 1  Weight=1.0000
 
+[Table][0x68FC999C,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0x85F26A51,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
 [Docking][Data]
-DockSpace         ID=0xD5ACB325 Window=0xA87D555D Pos=0,0 Size=1600,900 Split=Y
+DockSpace         ID=0xD5ACB325 Window=0xA87D555D Pos=0,0 Size=32,32 Split=Y
   DockNode        ID=0x00000007 Parent=0xD5ACB325 SizeRef=1600,37 HiddenTabBar=1 Selected=0x8EDA8100
   DockNode        ID=0x00000008 Parent=0xD5ACB325 SizeRef=1600,861 Split=X
     DockNode      ID=0x00000003 Parent=0x00000008 SizeRef=1249,900 Split=Y
