feat: DirectX12レンダリングシステムの機能追加と改善
### 概要
DirectX12を使用したレンダリングシステムにおいて、機能追加、リファクタリング、エラーハンドリングの改善、警告の抑制、パフォーマンス向上を目的とした変更を実施しました。

---

### 主な変更内容

#### **ObjectSystemBase**
- `PostDraw`メソッドを追加し、コマンドアロケータとコマンドリストのリセット処理を実装。
- `CreateCommandList`メソッド内でコマンドリストの`Close`呼び出しを削除。

#### **DirectX12**
- `Initialize`メソッドにデバッグモード時のエラー停止処理を条件付きで追加。
- `CommandExecute`メソッドでコマンドリストの`Close`処理を追加。
- `GetCommandListsLast`メソッドを追加し、最後のコマンドリストを取得可能に。

#### **PostEffect**
- `PostDraw`メソッドを追加し、コマンドリストのリセット処理を実装。
- `CreateCommandList`メソッドを新規追加し、描画用コマンドリストの生成処理を実装。

#### **DX12Helper**
- `CommandListCommonSetting`メソッドがRTVハンドルを引数として受け取るよう変更。
- `CreateDescriptorHeap`メソッドでエラー時のログ出力とアサートを追加。

#### **ImGuiManager**
- `_DEBUG`プリプロセッサディレクティブの範囲を拡張し、コードを簡略化。
- `EndFrame`関数で`GetCommandListsLast`を使用するよう変更。

#### **Timer**
- `GetNow`関数をテンプレート化し、型指定可能に変更。
- 新しい`Stop`関数を追加し、タイマー機能を拡張。

#### **Sprite**
- ピクセルシェーダーのライティング処理を削除し、シンプルな色とテクスチャの乗算に変更。

#### **ParticleSystem**
- `DrawCall`で`DX12Helper::CommandListCommonSetting`に`rtvHandle_`を渡すよう変更。
- パイプラインステート生成失敗時にエラーログを出力し、`assert(false)`を追加。

#### **NimaFramework**
- 各システムの`PostDraw`を呼び出す処理を`PostProcess`に追加。
- `EventTimer`の初期化と計測処理を追加。

---

### その他の変更

#### **プロジェクト構成**
- `Engine.vcxproj`で警告レベルを`Level4`に変更し、`TreatWarningAsError`を有効化。
- 新しいファイル`EventTimer.cpp`と`EventTimer.h`をプロジェクトに追加。

#### **シェーダー**
- `CopyImage.PS.hlsl`でピクセルシェーダーの出力アルファ値を`1.0f`に固定。
- `Sprite.PS.hlsl`で不要な構造体やフィールドを削除。

#### **デバッグUI**
- `NiGuiDebug`に新しいデバッグウィンドウ`Component data`を追加。
- メニューバーを実装し、ウィンドウの切り替え機能を追加。

#### **警告抑制**
- 構造体のアライメント警告（`#pragma warning(disable: 4324)`）を複数箇所に追加。

#### **バイナリファイル**
- `imgui.ini`のウィンドウ位置やドッキング構造を更新。

---

### 目的
- コードの可読性・保守性の向上。
- DirectX12レンダリングシステムの機能拡張と安定性の向上。
- デバッグ機能の強化と開発効率の改善。

--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -58,7 +58,7 @@
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
-      <WarningLevel>Level3</WarningLevel>
+      <WarningLevel>Level4</WarningLevel>
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions);_AMD64_</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
@@ -66,7 +66,7 @@
       <LanguageStandard>stdcpp20</LanguageStandard>
       <AdditionalOptions>/utf-8 %(AdditionalOptions)</AdditionalOptions>
       <AdditionalIncludeDirectories>%(AdditionalIncludeDirectories);$(ProjectDir)Externals\;$(ProjectDir)</AdditionalIncludeDirectories>
-      <TreatWarningAsError>false</TreatWarningAsError>
+      <TreatWarningAsError>true</TreatWarningAsError>
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <PrecompiledHeaderFile>
       </PrecompiledHeaderFile>
@@ -92,7 +92,7 @@
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
-      <WarningLevel>Level3</WarningLevel>
+      <WarningLevel>Level4</WarningLevel>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
@@ -105,8 +105,9 @@
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <PrecompiledHeaderFile>$(ProjectDir)Common\stdafx.h</PrecompiledHeaderFile>
       <ForcedIncludeFiles>%(ForcedIncludeFiles)</ForcedIncludeFiles>
-      <Optimization>MinSpace</Optimization>
+      <Optimization>Disabled</Optimization>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
+      <TreatWarningAsError>true</TreatWarningAsError>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -141,6 +142,7 @@
     <ClCompile Include="Core\DirectX12\TextureManager.cpp" />
     <ClCompile Include="Core\Win32\WinSystem.cpp" />
     <ClCompile Include="DebugTools\DebugManager\DebugManager.cpp" />
+    <ClCompile Include="DebugTools\EventTimer\EventTimer.cpp" />
     <ClCompile Include="DebugTools\ImGuiManager\ImGuiManager.cpp" />
     <ClCompile Include="DebugTools\ImGuiTemplates\ImGuiTemplates.cpp" />
     <ClCompile Include="DebugTools\Logger\Logger.cpp" />
@@ -204,6 +206,7 @@
     <ClInclude Include="Core\DirectX12\TextureManager.h" />
     <ClInclude Include="Core\Win32\WinSystem.h" />
     <ClInclude Include="DebugTools\DebugManager\DebugManager.h" />
+    <ClInclude Include="DebugTools\EventTimer\EventTimer.h" />
     <ClInclude Include="DebugTools\ImGuiManager\ImGuiManager.h" />
     <ClInclude Include="DebugTools\ImGuiTemplates\ImGuiTemplates.h" />
     <ClInclude Include="DebugTools\Logger\Logger.h" />
@@ -297,10 +300,6 @@
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
     </FxCompile>
-    <FxCompile Include="..\SampleProject\EngineResources\Shaders\Sprite.PS.hlsl">
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
-    </FxCompile>
     <FxCompile Include="..\SampleProject\EngineResources\Shaders\Sprite.VS.hlsl">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
@@ -326,6 +325,10 @@
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
     </FxCompile>
     <FxCompile Include="EngineResources\Shaders\Object3d.VS.hlsl">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
+    </FxCompile>
+    <FxCompile Include="EngineResources\Shaders\Sprite.PS.hlsl">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
     </FxCompile>
