--- a/Engine/Engine.vcxproj.filters
+++ b/Engine/Engine.vcxproj.filters
@@ -121,9 +121,6 @@
     <Filter Include="Core\WinSystem">
       <UniqueIdentifier>{5c7e8f14-1bd4-48f2-80b9-2ad2124c12e5}</UniqueIdentifier>
     </Filter>
-    <Filter Include="DebugTools\PrimitiveDrawer">
-      <UniqueIdentifier>{676fa4eb-91d9-4e1f-af5e-23aa2575b1f6}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Feature\Lighting">
       <UniqueIdentifier>{2128e531-19f2-4691-bd96-69fd85443bf2}</UniqueIdentifier>
     </Filter>
@@ -210,6 +207,9 @@
     </Filter>
     <Filter Include="Core\DirectX12\RTVHeapCounter">
       <UniqueIdentifier>{6c5ed3f0-48af-44cd-bbf9-d608ba01a0c9}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="DebugTools\EventTimer">
+      <UniqueIdentifier>{df5f5a1a-502e-4329-9008-38543f810d61}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -389,6 +389,9 @@
     </ClCompile>
     <ClCompile Include="Core\DirectX12\RTVHeapCounter.cpp">
       <Filter>Core\DirectX12\RTVHeapCounter</Filter>
+    </ClCompile>
+    <ClCompile Include="DebugTools\EventTimer\EventTimer.cpp">
+      <Filter>DebugTools\EventTimer</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -605,6 +608,9 @@
     <ClInclude Include="Core\DirectX12\RTVHeapCounter.h">
       <Filter>Core\DirectX12\RTVHeapCounter</Filter>
     </ClInclude>
+    <ClInclude Include="DebugTools\EventTimer\EventTimer.h">
+      <Filter>DebugTools\EventTimer</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include=".editorconfig" />
@@ -635,9 +641,6 @@
     <FxCompile Include="..\SampleProject\EngineResources\Shaders\Sprite.VS.hlsl">
       <Filter>HLSL</Filter>
     </FxCompile>
-    <FxCompile Include="..\SampleProject\EngineResources\Shaders\Sprite.PS.hlsl">
-      <Filter>HLSL</Filter>
-    </FxCompile>
     <FxCompile Include="..\SampleProject\EngineResources\Shaders\Particle.VS.hlsl">
       <Filter>HLSL</Filter>
     </FxCompile>
@@ -657,6 +660,9 @@
       <Filter>HLSL</Filter>
     </FxCompile>
     <FxCompile Include="EngineResources\Shaders\CopyImage.PS.hlsl">
+      <Filter>HLSL</Filter>
+    </FxCompile>
+    <FxCompile Include="EngineResources\Shaders\Sprite.PS.hlsl">
       <Filter>HLSL</Filter>
     </FxCompile>
   </ItemGroup>
