--- a/SampleProject/imgui.ini
+++ b/SampleProject/imgui.ini
@@ -4,22 +4,22 @@ Size=756,957
 Collapsed=0
 
 [Window][Log]
-Pos=0,25
+Pos=0,17
 Size=15,27
 Collapsed=0
-DockId=0x00000002,0
+DockId=0x0000000B,0
 
 [Window][Objects]
-Pos=0,17
-Size=7,27
+Pos=29,0
+Size=4,27
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][デバッグ]
-Pos=17,17
-Size=15,27
+Pos=17,0
+Size=10,27
 Collapsed=0
-DockId=0x00000009,0
+DockId=0x00000004,0
 
 [Window][SRVManager]
 Pos=726,451
@@ -52,28 +52,40 @@ Size=97,64
 Collapsed=0
 
 [Window][DebugInfoBar]
-Pos=0,0
-Size=32,15
-Collapsed=0
-DockId=0x00000007,0
-
-[Window][DebugInfo]
-Pos=17,30
-Size=15,27
+Pos=24,29
+Size=8,27
 Collapsed=0
 DockId=0x0000000A,0
 
-[Window][Viewport]
-Pos=9,17
-Size=6,27
+[Window][DebugInfo]
+Pos=24,17
+Size=8,27
 Collapsed=0
-DockId=0x00000006,0
+DockId=0x00000008,0
 
-[Window][NiUI_DebugInfo]
-Pos=17,17
+[Window][Viewport]
+Pos=0,0
 Size=15,27
 Collapsed=0
-DockId=0x00000009,1
+DockId=0x00000003,0
+
+[Window][NiUI_DebugInfo]
+Pos=17,0
+Size=10,49
+Collapsed=0
+DockId=0x00000004,1
+
+[Window][Component data]
+Pos=1011,0
+Size=430,599
+Collapsed=0
+DockId=0x00000004,2
+
+[Window][EventTimer]
+Pos=17,17
+Size=5,27
+Collapsed=0
+DockId=0x0000000C,0
 
 [Table][0x3DFC7327,2]
 Column 0  Weight=1.0000
@@ -527,16 +539,30 @@ Column 1  Weight=1.0000
 Column 0  Weight=1.0000
 Column 1  Weight=1.0000
 
+[Table][0x1182802B,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0x812E1469,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0x2ACAC71F,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
 [Docking][Data]
-DockSpace         ID=0xD5ACB325 Window=0xA87D555D Pos=0,0 Size=32,32 Split=Y
-  DockNode        ID=0x00000007 Parent=0xD5ACB325 SizeRef=1600,35 HiddenTabBar=1 Selected=0x8EDA8100
-  DockNode        ID=0x00000008 Parent=0xD5ACB325 SizeRef=1600,863 Split=X
-    DockNode      ID=0x00000003 Parent=0x00000008 SizeRef=1249,900 Split=Y
-      DockNode    ID=0x00000001 Parent=0x00000003 SizeRef=1600,653 Split=X Selected=0xBA965914
-        DockNode  ID=0x00000005 Parent=0x00000001 SizeRef=127,670 Selected=0x967E7699
-        DockNode  ID=0x00000006 Parent=0x00000001 SizeRef=1120,670 CentralNode=1 Selected=0x13926F0B
-      DockNode    ID=0x00000002 Parent=0x00000003 SizeRef=1600,208 Selected=0x64F50EE5
-    DockNode      ID=0x00000004 Parent=0x00000008 SizeRef=349,900 Split=Y Selected=0x435A4E3F
-      DockNode    ID=0x00000009 Parent=0x00000004 SizeRef=348,739 Selected=0xC4F72FF0
-      DockNode    ID=0x0000000A Parent=0x00000004 SizeRef=348,122 Selected=0x627D110E
+DockSpace       ID=0xD5ACB325 Window=0xA87D555D Pos=0,0 Size=32,32 Split=Y Selected=0x13926F0B
+  DockNode      ID=0x00000001 Parent=0xD5ACB325 SizeRef=1600,599 Split=X Selected=0x13926F0B
+    DockNode    ID=0x00000003 Parent=0x00000001 SizeRef=1009,450 CentralNode=1 Selected=0x13926F0B
+    DockNode    ID=0x00000009 Parent=0x00000001 SizeRef=589,450 Split=X Selected=0x8EDA8100
+      DockNode  ID=0x00000004 Parent=0x00000009 SizeRef=430,597 Selected=0x435A4E3F
+      DockNode  ID=0x00000005 Parent=0x00000009 SizeRef=157,597 Selected=0x967E7699
+  DockNode      ID=0x00000002 Parent=0xD5ACB325 SizeRef=1600,299 Split=X Selected=0x64F50EE5
+    DockNode    ID=0x00000006 Parent=0x00000002 SizeRef=1181,301 Split=X Selected=0x64F50EE5
+      DockNode  ID=0x0000000B Parent=0x00000006 SizeRef=901,299 Selected=0x64F50EE5
+      DockNode  ID=0x0000000C Parent=0x00000006 SizeRef=278,299 Selected=0x3A93B30B
+    DockNode    ID=0x00000007 Parent=0x00000002 SizeRef=417,301 Split=Y Selected=0x627D110E
+      DockNode  ID=0x00000008 Parent=0x00000007 SizeRef=417,231 Selected=0x627D110E
+      DockNode  ID=0x0000000A Parent=0x00000007 SizeRef=417,66 Selected=0x8EDA8100
 
