feat: フルスクリーン描画用シェーダーの追加と改善
* `DirectX12.cpp`
  - デバイス初期化時にエラー時の停止処理を追加。
  - デバッグビルド時に `DX12Helper::PauseError` を呼び出す。

* `DX12Helper.cpp`
  - `PauseError` メソッドを追加し、エラーメッセージの表示を制限。

* `DX12Helper.h`
  - `PauseError` メソッドの宣言を追加、デバッグビルド時のみ有効。

* `PostEffect.h`
  - シェーダーのパスを `CopyImage` から `Fullscreen` に変更。

* `Engine.vcxproj` と `Engine.vcxproj.filters`
  - `CopyImage` シェーダーを `Fullscreen` シェーダーに置き換え。

* `CopyImage` シェーダー関連のファイルを削除し、`Fullscreen` シェーダーを新たに追加。

* `ParticleEmitter.cpp`
  - エミッターデータのコピー方法を `std::memcpy` から直接代入に変更。

* `ParticleEmitter.h`
  - エミッターデータの構造体にデフォルト値を設定。

* `EmitterManager.cpp`
  - ファイル読み込みメソッドの引数型を `std::string` から `const std::string&` に変更。

* `AABB.h`
  - ポインタメンバーを初期化するように変更。

* 新たに追加されたシェーダーファイル:
  - `Fullscreen.hlsli`, `Fullscreen.PS.hlsl`, `Fullscreen.VS.hlsl` でフルスクリーン描画用のシェーダーを実装。

--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -278,7 +278,7 @@
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
     </None>
-    <None Include="EngineResources\Shaders\CopyImage.hlsli">
+    <None Include="EngineResources\Shaders\Fullscreen.hlsli">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
     </None>
@@ -304,11 +304,11 @@
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
     </FxCompile>
-    <FxCompile Include="EngineResources\Shaders\CopyImage.PS.hlsl">
+    <FxCompile Include="EngineResources\Shaders\Fullscreen.PS.hlsl">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
     </FxCompile>
-    <FxCompile Include="EngineResources\Shaders\CopyImage.VS.hlsl">
+    <FxCompile Include="EngineResources\Shaders\Fullscreen.VS.hlsl">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
     </FxCompile>
